--- a/public/styles.css
+++ b/public/styles.css
@@ -4,15 +4,18 @@ body {
     height: 100vh;
     align-items: center;
     text-align: center;
+    background-color: #86efac;
 }
 
 .title {
     flex: 1;
-    font-size: 10rem;
+    font-size: 9rem;
+    padding-top: 5rem;
 }
 
 .player {
-    flex: 1
+    flex: 1;
+    align-self: center;
 }
 
 .idle {
@@ -22,4 +25,22 @@ body {
 .user-input {
     flex: 2;
     align-self: center;
+    display: flex;
+    align-items: center;
+}
+
+button {
+    width: 6rem;
+    height: 3rem;
+    border-radius: 1rem;
+    border-style: none;
+    font-size: 2rem;
+    background-color: #fecaca;
+}
+input {
+    height: 3rem;
+    width: 14rem;
+    font-size: 2rem;
+    border-radius: 1rem;
+    padding: 1rem 1rem;
 }
